--- a/config/database.yml
+++ b/config/database.yml
@@ -17,13 +17,16 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  port: 5432
+  username: kevin
+  password: ceobook1 
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: Bookma_development
+  database: bookbig
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
